Zinc incremental javac, Scala 3, Maven-layout store and Windows install
- Java compiles run in a per-job Zinc 2.0.4 worker forked from the
  engine, annotation processors included; the in-engine ABI incremental
  compiler and InProcessJavac are removed.
- scala = in jk.toml selects Scala 3; compiler and sbt-bridge land on
  the worker classpath and jk new --lang scala scaffolds a project.
- Maven layout is the only dependency store: repos/<name> plus .jk
  memos, first-party workers under repos/jk-local, and the [m2] table
  decides when ~/.m2 is the primary jar store.
- Managed JDKs are tracked in $JK_STATE_DIR/jk-jdks.toml; jk jdk verify
  checks them. JumpKick builds and installs on Windows (install.ps1).

Tickets: JK-1001, JK-2330